# todo-cli

./: .gitignore  Makefile  SPEC.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp  todo.cpp  todo.h
cpp/test/: CMakeLists.txt  test_todo.cpp
glib/: main.c  test_todo.c  todo_cli.c  todo_cli.h
go/: main.go  main_test.go  storage.go
lua/: test_todo.lua  todo_cli.lua
python/: pyproject.toml
python/tests/: test_todo.py
python/todo_cli/: __init__.py  __main__.py  cli.py  storage.py
rust/: Cargo.toml
rust/src/: main.rs  storage.rs
shell/: test_todo.sh  todo.sh
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: index.test.ts  index.ts
